--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ html {
   font-size: 62.5%;
 }
 body {
+  width: 100vw;
   margin: 0px;
-  background: rgba(255, 0, 0, 0.108)
+  background: rgba(0, 255, 179, 0.4)
     url("https://d2w9rnfcy7mm78.cloudfront.net/23809734/original_f52ea80f3e11c0f9afdfb5b8385961b0.png?1695612211?bc=0")
     repeat scroll -18px -10px;
 }
@@ -50,7 +51,11 @@ body {
   align-items: flex-start;
 }
 .container-right {
-  width: max-content;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
 }
 .header {
   width: max-content;
@@ -62,22 +67,39 @@ body {
   /* margin: 1rem; */
 }
 .header-right {
-  width: max-content;
+  width: 100%;
   height: max-content;
-  /* border: 3px dotted #dbd6ff; */
-  background-color: #e9e9ffd6;
+  border: 3px dotted #d4f4ea;
+  background-color: #9affe1d6;
+  box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
+  padding: 0.8rem 1rem 0.5rem 3rem;
+}
+.news-right {
+  width: 100%;
+  height: max-content;
+  border: 3px dotted #d4f4ea;
+  background-color: #9affe1d6;
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 0.8rem 1rem 0.5rem 3rem;
 }
 .guild-update {
   font-size: 5rem;
   font-family: linea;
-  width: 45vw;
   color: #0900ff;
-  text-shadow: 0px 20px 35px rgb(0 39 255 / 55%);
+  /* text-shadow: 0px 20px 35px rgb(0 39 255 / 55%); */
   -webkit-text-stroke-width: 0.4px;
-  -webkit-text-stroke-color: #ff3737;
-  transition: all 1.5s ease-in-out;
+  -webkit-text-stroke-color: #30ffc3;
+  transition: all 0.5s ease-in-out;
+}
+.guild-info {
+  font-size: 4rem;
+  font-family: basker1;
+  color: #0900ff;
+  /* text-shadow: 0px 20px 35px rgb(0 39 255 / 55%); */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #30ffc3;
+
+  transition: all 0.5s ease-in-out;
 }
 #title {
   font-family: healB;
@@ -117,4 +139,100 @@ body {
   font-size: 1.5rem;
   text-decoration: line-through;
   padding: 1rem;
+}
+.signup {
+  clear: left;
+  font-family: basker1;
+  font-size: 2.5rem;
+  color: blue;
+}
+#signup-header {
+  font-family: healB;
+  font-size: 4rem;
+}
+.fields {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+input {
+  color: black;
+  font-family: basker1;
+  font-size: 2rem;
+}
+#mce-EMAIL {
+  border: none;
+  border-bottom: 2px dotted blue;
+  outline: none;
+}
+#mce-FNAME {
+}
+#mce-LNAME {
+}
+#mc-embedded-subscribe {
+  background: blue;
+  border: none;
+  box-shadow: 2px 2px 20px rgb(134 147 243);
+  color: white;
+}
+.mc-field-group {
+  color: black;
+  width: 30vw;
+  display: flex;
+  /* border: 2px dotted blue; */
+  flex-direction: row;
+  justify-content: space-between;
+  /* border: 2px dotted blue; */
+}
+.asterisk {
+  color: blue;
+}
+.text {
+  border: none;
+  border-bottom: 2px dotted blue;
+  outline: none;
+}
+.button {
+}
+.clear.foot {
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+.pagelinks:hover {
+  color: #ffffff;
+  text-shadow: 0px 0px 10px blue;
+  text-decoration: underline;
+}
+.contactlinks:hover {
+  color: #ffffff;
+  text-shadow: 0px 0px 10px blue;
+  text-decoration: underline;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    /* background-color: lightblue; */
+    width: 100vw;
+  }
+  .main {
+    flex-direction: column;
+    position: absolute;
+    left: 50%;
+    /* top: 50%; */
+    transform: translate(-50%, 0);
+  }
+  .container-right {
+    width: 100%;
+  }
+  .guild-update {
+    font-size: 4rem;
+  }
+  .guild-info {
+    font-size: 3rem;
+  }
+  .signup {
+    font-size: 2rem;
+  }
+  .mc-field-group {
+    width: 100%;
+  }
 }
