--- a/style.css
+++ b/style.css
@@ -219,6 +219,9 @@ input {
     left: 50%;
     /* top: 50%; */
     transform: translate(-50%, 0);
+    align-items: center;
+    align-content: center;
+    justify-content: center;
   }
   .container-right {
     width: 100%;
