--- a/style.css
+++ b/style.css
@@ -232,9 +232,13 @@ input {
   }
   .guild-update {
     font-size: 4rem;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: #30ffc3;
   }
   .guild-info {
     font-size: 3rem;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #30ffc3;
   }
   .signup {
     font-size: 2rem;
