--- a/style.css
+++ b/style.css
@@ -210,6 +210,10 @@ input {
   text-shadow: 0px 0px 10px blue;
   text-decoration: underline;
 }
+::selection {
+  background: white;
+  color: blue;
+}
 @media only screen and (max-width: 600px) {
   body {
     /* background-color: lightblue; */
@@ -232,12 +236,12 @@ input {
   }
   .guild-update {
     font-size: 4rem;
-    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: #30ffc3;
   }
   .guild-info {
     font-size: 3rem;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 0.4px;
     -webkit-text-stroke-color: #30ffc3;
   }
   .signup {
