--- a/style.css
+++ b/style.css
@@ -214,6 +214,9 @@ input {
   background: white;
   color: blue;
 }
+.header:hover {
+  cursor: vertical-text;
+}
 @media only screen and (max-width: 600px) {
   body {
     /* background-color: lightblue; */
