--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 .main {
   position: absolute;
-  left: 10vw;
+  left: 5vw;
   top: 5vh;
   display: flex;
   flex-direction: row;
@@ -96,7 +96,7 @@ body {
   font-family: basker1;
   color: #0900ff;
   /* text-shadow: 0px 20px 35px rgb(0 39 255 / 55%); */
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: 0.9px;
   -webkit-text-stroke-color: #30ffc3;
 
   transition: all 0.5s ease-in-out;
@@ -235,7 +235,11 @@ input {
     justify-content: center;
   }
   .container-right {
-    width: 100%;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
   .guild-update {
     font-size: 4rem;
@@ -252,5 +256,7 @@ input {
   }
   .mc-field-group {
     width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
