--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   gap: 2rem;
 }
 .container-left {
-  width: max-content;
+  /* width: max-content; */
   display: flex;
   gap: 1rem;
   flex-direction: column;
@@ -102,6 +102,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 #title {
+  /* text-align: center; */
   font-family: healB;
   color: black;
   font-size: 4rem;
@@ -148,7 +149,7 @@ body {
 }
 #signup-header {
   font-family: healB;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .fields {
   display: flex;
@@ -217,7 +218,7 @@ input {
 .header:hover {
   cursor: vertical-text;
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
   body {
     /* background-color: lightblue; */
     width: 100vw;
