--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
   src: url("fonts/BBBBaskervvol-Fondue.woff"),
     url("fonts/BBBBaskervvol-Fondue.woff2");
 }
+:root {
+  --main-color: #00ffb366;
+  --right-color: #9affe1d6;
+  --accent-color: blue;
+}
 * {
   box-sizing: border-box;
 }
@@ -30,7 +35,7 @@ html {
 body {
   width: 100vw;
   margin: 0px;
-  background: rgba(0, 255, 179, 0.4)
+  background: var(--main-color)
     url("https://d2w9rnfcy7mm78.cloudfront.net/23809734/original_f52ea80f3e11c0f9afdfb5b8385961b0.png?1695612211?bc=0")
     repeat scroll -18px -10px;
 }
@@ -59,8 +64,9 @@ body {
 }
 .header {
   width: max-content;
+  /* width: 100%; */
   height: max-content;
-  border: 3px dotted blue;
+  border: 3px dotted var(--accent-color);
   background-color: white;
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 1rem;
@@ -70,7 +76,7 @@ body {
   width: 100%;
   height: max-content;
   border: 3px dotted #d4f4ea;
-  background-color: #9affe1d6;
+  background-color: var(--right-color);
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 0.8rem 1rem 0.5rem 3rem;
 }
@@ -78,14 +84,14 @@ body {
   width: 100%;
   height: max-content;
   border: 3px dotted #d4f4ea;
-  background-color: #9affe1d6;
+  background-color: var(--right-color);
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 0.8rem 1rem 0.5rem 3rem;
 }
 .guild-update {
   font-size: 5rem;
   font-family: linea;
-  color: #0900ff;
+  color: var(--accent-color);
   /* text-shadow: 0px 20px 35px rgb(0 39 255 / 55%); */
   -webkit-text-stroke-width: 0.1px;
   -webkit-text-stroke-color: #30ffc3;
@@ -94,12 +100,21 @@ body {
 .guild-info {
   font-size: 4rem;
   font-family: basker1;
-  color: #0900ff;
+  color: var(--accent-color);
   /* text-shadow: 0px 20px 35px rgb(0 39 255 / 55%); */
   -webkit-text-stroke-width: 0.9px;
   -webkit-text-stroke-color: #30ffc3;
 
   transition: all 0.5s ease-in-out;
+}
+.guild-info.about {
+  /* text-decoration: line-through; */
+  text-decoration: none;
+  font-size: 2.5rem;
+  font-family: basker1;
+  color: var(--accent-color);
+  -webkit-text-stroke-width: 0px;
+  /* -webkit-text-stroke-color: #30ffc3; */
 }
 #title {
   /* text-align: center; */
@@ -116,36 +131,60 @@ body {
 .pages {
   width: 100%;
   height: max-content;
-  border: 3px dotted blue;
+  border: 3px dotted var(--accent-color);
   background-color: white;
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 .pages.second {
   font-family: basker1;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  gap: 0.5rem;
 }
 .pagelinks {
   font-family: basker2;
   color: black;
   font-size: 2rem;
   text-decoration: none;
-  padding: 1rem;
+  margin-left: 1rem;
+  /* margin: 1rem; */
 }
 .pagelinks.active {
-  color: blue;
+  color: var(--accent-color);
 }
 .contactlinks {
   font-family: basker1;
-  color: blue;
+  color: var(--accent-color);
   font-size: 1.5rem;
   text-decoration: line-through;
-  padding: 1rem;
+  margin-left: 1rem;
+}
+/* blocks formating */
+.block-title {
+  font-family: healB;
+  font-size: 3rem;
+  color: var(--accent-color);
+}
+.block-content {
+  font-family: basker1;
+  color: black;
+  font-size: 2.5rem;
+}
+.block-content-link {
+  font-family: basker1;
+  color: var(--accent-color);
+  font-size: 2.5rem;
+  text-decoration: none;
 }
 .signup {
   clear: left;
   font-family: basker1;
   font-size: 2.5rem;
-  color: blue;
+  color: var(--accent-color);
 }
 #signup-header {
   font-family: healB;
@@ -160,12 +199,12 @@ input {
   color: black;
   font-family: basker1;
   font-size: 2rem;
-  padding-left: 1.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   color: #676767;
 }
 #mce-EMAIL {
   border: none;
-  border-bottom: 2px dotted blue;
+  border-bottom: 2px dotted var(--accent-color);
   outline: none;
 }
 #mce-FNAME {
@@ -173,7 +212,7 @@ input {
 #mce-LNAME {
 }
 #mc-embedded-subscribe {
-  background: blue;
+  background: var(--accent-color);
   border: none;
   box-shadow: 2px 2px 20px rgb(134 147 243);
   color: white;
@@ -182,17 +221,17 @@ input {
   color: black;
   width: 30vw;
   display: flex;
-  /* border: 2px dotted blue; */
+  /* border: 2px dotted var(--accent-color); */
   flex-direction: row;
   justify-content: space-between;
-  /* border: 2px dotted blue; */
+  /* border: 2px dotted var(--accent-color); */
 }
 .asterisk {
-  color: blue;
+  color: var(--accent-color);
 }
 .text {
   border: none;
-  border-bottom: 2px dotted blue;
+  border-bottom: 2px dotted var(--accent-color);
   outline: none;
 }
 .button {
@@ -203,20 +242,43 @@ input {
 }
 .pagelinks:hover {
   color: #ffffff;
-  text-shadow: 0px 0px 10px blue;
+  text-shadow: 0px 0px 10px var(--accent-color);
   text-decoration: underline;
+  transform: translateX(10%) scale(1.1);
+  text-decoration: none;
+}
+.block-content-link:hover {
+  color: #ffffff;
+  text-shadow: 0px 0px 10px var(--accent-color);
+  text-decoration: underline;
+  text-decoration: none;
 }
 .contactlinks:hover {
   color: #ffffff;
-  text-shadow: 0px 0px 10px blue;
+  text-decoration: none;
+  text-shadow: 0px 0px 10px var(--accent-color);
   text-decoration: underline;
+  /* transition: all 0.2s ease-in-out; */
+  transform: translateX(10%) scale(1.1);
 }
 ::selection {
   background: white;
-  color: blue;
+  color: var(--accent-color);
 }
 .header:hover {
   cursor: vertical-text;
+  text-decoration: none;
+}
+.guild-info.about:hover {
+  color: #ffffff;
+  text-shadow: 0px 0px 10px var(--accent-color);
+  /* text-decoration: underline; */
+  text-decoration: none;
+}
+#mc-embedded-subscribe:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 2px 50px rgb(63 102 244 83%);
+  cursor: alias;
 }
 @media only screen and (max-width: 900px) {
   body {
@@ -236,7 +298,7 @@ input {
     justify-content: center;
   }
   .container-right {
-    width: 95%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,5 +321,8 @@ input {
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+  .fields {
+    gap: 1.5rem;
   }
 }
