--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ input {
     -webkit-text-stroke-color: #30ffc3;
   }
   .guild-info {
-    font-size: 3rem;
+    font-size: 2.7rem;
     -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: #30ffc3;
   }
@@ -324,5 +324,14 @@ input {
   }
   .fields {
     gap: 1.5rem;
+  }
+  .block-title {
+    font-size: 2.5rem;
+  }
+  .block-content {
+    font-size: 2rem;
+  }
+  .block-content-link {
+    font-size: 2rem;
   }
 }
