--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ body {
     url("https://d2w9rnfcy7mm78.cloudfront.net/23809734/original_f52ea80f3e11c0f9afdfb5b8385961b0.png?1695612211?bc=0")
     repeat scroll -18px -10px;
 }
+.change-back {
+  position: fixed;
+  left: 5vw;
+  bottom: 2vh;
+  font-size: 2rem;
+  font-family: healB;
+}
 .main {
   position: absolute;
   left: 5vw;
@@ -79,6 +86,7 @@ body {
   background-color: var(--right-color);
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 0.8rem 1rem 0.5rem 3rem;
+  margin-bottom: 1rem;
 }
 .news-right {
   width: 100%;
@@ -87,6 +95,7 @@ body {
   background-color: var(--right-color);
   box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
   padding: 0.8rem 1rem 0.5rem 3rem;
+  margin-bottom: 3rem;
 }
 .guild-update {
   font-size: 5rem;
@@ -128,6 +137,7 @@ body {
     2px -30px 18px rgba(0, 0, 255, 0.26),
     1px -14px 17px rgba(255, 254, 252, 0.18);
 }
+
 .pages {
   width: 100%;
   height: max-content;
@@ -304,13 +314,16 @@ input {
     align-items: center;
     gap: 1rem;
   }
+  .header-right {
+    padding: 0.8rem 1rem 0.5rem 2rem;
+  }
   .guild-update {
     font-size: 4rem;
     -webkit-text-stroke-width: 0.04px;
     -webkit-text-stroke-color: #30ffc3;
   }
   .guild-info {
-    font-size: 2.7rem;
+    font-size: 2.4rem;
     -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: #30ffc3;
   }
