--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   left: 5vw;
   bottom: 2vh;
   font-size: 2rem;
-  font-family: healB;
+  font-family: basker1;
 }
 .main {
   position: absolute;
@@ -131,13 +131,6 @@ body {
   color: black;
   font-size: 4rem;
 }
-.change {
-  font-feature-settings: none;
-  text-shadow: 2px -3px 6px rgba(0, 0, 255, 0.55),
-    2px -30px 18px rgba(0, 0, 255, 0.26),
-    1px -14px 17px rgba(255, 254, 252, 0.18);
-}
-
 .pages {
   width: 100%;
   height: max-content;
@@ -153,8 +146,18 @@ body {
   display: flex;
   flex-direction: row;
   padding: 1rem;
-  gap: 0.5rem;
+  gap: 1.5rem;
 }
+/* .pages.third {
+  width: 100%;
+  height: max-content;
+  border: 3px dotted var(--accent-color);
+  background-color: white;
+  box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+} */
 .pagelinks {
   font-family: basker2;
   color: black;
@@ -166,6 +169,10 @@ body {
 .pagelinks.active {
   color: var(--accent-color);
 }
+/* .pagelinks.change {
+  font-size: 2rem;
+  font-family: healB;
+} */
 .contactlinks {
   font-family: basker1;
   color: var(--accent-color);
@@ -321,6 +328,9 @@ input {
     font-size: 4rem;
     -webkit-text-stroke-width: 0.04px;
     -webkit-text-stroke-color: #30ffc3;
+  }
+  #change-ground {
+    display: none;
   }
   .guild-info {
     font-size: 2.4rem;
