--- a/style.css
+++ b/style.css
@@ -408,8 +408,8 @@ input {
     margin: 0px;
     padding: 1rem;
   }
-  #title {
-    /* font-size: 4.5rem;s */
+  #signup-header {
+    font-size: 2.5rem;
   }
   .pages.third {
     display: none;
