--- a/style.css
+++ b/style.css
@@ -393,6 +393,9 @@ input {
   cursor: vertical-text;
   text-decoration: none;
 }
+.popup-content:hover {
+  cursor: alias;
+}
 /* .guild-info:hover {
   color: #ffffff;
   text-shadow: 0px 0px 20px var(--accent-color);
@@ -433,6 +436,9 @@ input {
   }
   #signup-header {
     font-size: 2.5rem;
+  }
+  .block-img {
+    width: 100%;
   }
   .popup-content {
     max-width: 100%;
