--- a/style.css
+++ b/style.css
@@ -24,9 +24,15 @@
 :root {
   --main-color: #00ffb366;
   --right-color: #9affe1fa;
+  --background-color: #9affe1fa;
+  /* --main-color: #00ffb366;
+  --right-color: #f99802; */
+  /* --right-color: #f99802; */
+  /* --right-color: #fffffffa; */
   /* --main-color: #0200ffab;
   --right-color: #806dfe; */
   --accent-color: blue;
+  /* --accent-color: f99802; */
 }
 * {
   box-sizing: border-box;
@@ -37,7 +43,9 @@ html {
 body {
   width: 100vw;
   margin: 0px;
-  background: white url("") repeat scroll -18px -10px;
+  background: var(--background-color)
+    url("https://d2w9rnfcy7mm78.cloudfront.net/23809734/original_f52ea80f3e11c0f9afdfb5b8385961b0.png?1695612211?bc=0")
+    repeat scroll -18px -10px;
 }
 .popup {
   display: none;
@@ -69,7 +77,7 @@ body {
 }
 .main {
   position: absolute;
-  left: 5vw;
+  left: 2vw;
   top: 5vh;
   display: flex;
   flex-direction: row;
@@ -83,12 +91,38 @@ body {
   flex-direction: column;
   align-items: flex-start;
 }
+#daddy {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.working-img {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .container-right {
   width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 1rem;
+}
+.container-right.work {
+  width: 70vw;
+  /* border: 3px dotted #d4f4ea;
+  background-color: var(--right-color);
+  box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
+  padding: 2rem 1rem 0.5rem 2rem;
+  margin-bottom: 1rem; */
+}
+.container-side {
+  width: 20vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  background-color: var(--right-color);
 }
 .header {
   /* width: max-content; */
@@ -103,6 +137,15 @@ body {
 .header-right {
   width: 100%;
   height: max-content;
+  border: 3px dotted #d4f4ea;
+  background-color: var(--right-color);
+  box-shadow: 5px 5px 100px 20px rgba(255, 255, 255, 0.5);
+  padding: 2rem 1rem 0.5rem 2rem;
+  margin-bottom: 1rem;
+}
+.header-right-alter {
+  width: 100%;
+  height: 100%;
   /* border: 2px dotted #ceffd8; */
   border: 3px dotted #d4f4ea;
   background-color: var(--right-color);
@@ -111,6 +154,8 @@ body {
   padding: 2rem 1rem 0.5rem 2rem;
   margin-bottom: 1rem;
 }
+.header-right-alter2 {
+}
 /* blocks formating */
 .block-title {
   font-family: healB;
@@ -118,8 +163,15 @@ body {
   color: var(--accent-color);
   margin: 1rem 2rem 2rem 0;
 }
+.block-title.alter {
+  font-size: 2.5rem;
+  /* color: black; */
+}
 .block-img {
   width: 50%;
+}
+.block-img-working {
+  width: 100%;
 }
 .block-content {
   font-family: basker1;
@@ -127,6 +179,9 @@ body {
   font-size: 2.5rem;
   /* margin-right: 2rem; */
   margin: 0.8rem 2rem 0.5rem 0rem;
+}
+.block-content.alter {
+  font-size: 1.8rem;
 }
 .block-content.top {
   font-size: 2.6rem;
@@ -434,6 +489,9 @@ input {
     margin: 0px;
     padding: 1rem;
   }
+  .container-side {
+    display: none;
+  }
   #signup-header {
     font-size: 2.5rem;
   }
@@ -468,6 +526,8 @@ input {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+  }
+  .container-side {
   }
   .guild-update {
     font-size: 4rem;
