--- a/style.css
+++ b/style.css
@@ -492,6 +492,9 @@ input {
   .container-side {
     display: none;
   }
+  .container-right.work {
+    width: 92vw;
+  }
   #signup-header {
     font-size: 2.5rem;
   }
