--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   position: fixed;
+  height: 100vh;
   /* flex: 1; */
 }
 #daddy {
@@ -363,7 +364,7 @@ body {
 }
 .pagemain {
   display: flex;
-  height: 70vh;
+  height: 100%;
   gap: 1rem;
   flex-direction: column;
   align-items: flex-start;
@@ -656,7 +657,7 @@ input {
     flex-direction: column;
     position: absolute;
     left: 4vw;
-    top: 50%;
+    top: 56%;
     margin: 0px;
     /* transform: translate(-50%, 0); */
     align-items: center;
@@ -667,7 +668,7 @@ input {
     width: 90vw;
   }
   .navbar-container {
-    gap: 2rem;
+    gap: 3rem;
     margin: 0px;
     /* width: 100%; */
   }
@@ -701,6 +702,9 @@ input {
   }
   .signup {
     font-size: 2rem;
+  }
+  .pagemain {
+    justify-content: flex-start;
   }
   .mc-field-group {
     width: 100%;
