--- a/pigeons/style.css
+++ b/pigeons/style.css
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: none;
 }
 
 button {
@@ -27,7 +28,6 @@ button {
   padding: 1px 2px;
   margin: 0 3px;
 
-  cursor: crosshair;
   transition: all 0.1s;
 }
 
@@ -45,6 +45,8 @@ button:hover {
   padding: 10px;
   width: 100vw;
   height: 5vh;
+
+  font-family: "Century", serif;
 }
 
 .header > :last-child {
@@ -82,4 +84,25 @@ button:hover {
   grid-column-start: 3;
   grid-row-start: 2;
   grid-column-end: 8;
+
+  font-size: 0.9em;
+
+  line-height: 1.23em;
+}
+
+.content > :first-child {
+  margin-bottom: 0.4em;
+  font-weight: 100;
+}
+
+.image-box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  mix-blend-mode: multiply;
+  box-shadow: 0 0 50px 5px rgba(0, 0, 255, 0.05);
+}
+
+.image-box img {
+  width: 35vw;
 }
