--- a/style.css
+++ b/style.css
@@ -183,6 +183,18 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
+
+.channel-container {
+	border-top: 1px solid black;
+	padding: .5em;
+	margin-bottom: 4em;
+}
+
+.working-img.feed {
+	background: #eee;
+	padding: 1em;
+}
+
 .container-right {
   display: flex;
   flex-direction: column;
@@ -354,6 +366,35 @@ body {
 .block-img-working {
   width: 100%;
   filter: grayscale(1);
+}
+
+.link {
+	font-size: 1.7em;
+}
+
+a {
+	text-decoration: none;
+}
+
+.channel {
+	background: #ddd;
+	padding: .3em;
+}
+
+.arena {
+	padding: .3em;
+	background: #222;
+	color: #eee;
+}
+
+.comment {
+	font-size: 1.7em;
+	color: #aaa;
+	font-style: italic;
+}
+
+.block-img-working:hover {
+  filter: grayscale(0);
 }
 .block-content {
   font-family: basker1;
@@ -883,3 +924,4 @@ input {
   .header-right-dir {
   }
 }
+
